# ResearchT

./: .gitignore  main.py  pyproject.toml
config/: secret.py
data/: Untitled.ipynb  en_ko_dataset.py
model/: __init__.py  en_ko_dataset.py  models.py  train.py  translation_model.py
