[project]
name = "researcht"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.3.0",
    "fastapi>=0.119.0",
    "loguru>=0.7.3",
    "pandas>=2.0.0",
    "protobuf>=6.33.0",
    "pydantic-settings>=2.11.0",
    "sentencepiece>=0.2.1",
    "tiktoken>=0.12.0",
    "torch>=2.9.0",
    "transformers>=4.57.1",
    "uvicorn>=0.37.0",
]
